<resources>
    <string name="app_name">AID</string>
    <string name="aid">Aquaculture Intelligent Database</string>

    <string name="category_do_medicine">DO Chemical</string>
    <string name="category_do_lime">Lime</string>
    <string name="category_probiotic">Probiotic</string>

    <string name="category_do_ingredient">1. Cu₂O– 3.7%\n2. Probiotics– Moderate\n3. Enzyme- Moderate\n4. Micro Elements- Moderate\n5. QS- 100%\n6. Na₂O- 6.8%\n7. AL₂O3- 25%\n8. CaO- 9.38%\n9. MgO- 5.2%\n10. TiO₂- 0.5%</string>
    <string name="category_oxy_ingredient">Sodium Per Carbonate: 90%, H₂O₂ 10% Oxygen Release Capacity: 14%</string>
    <string name="category_pandora_ingredient">COMPOSITION: Per kg\n1. Selected minerals and microorganisms for a good pond water environment.\n2. Saccharomyces Cerevistae- 1.5 X 10^8 CFU Lactobacillus Acidophilus- 1.5X10^ 9 CFU\n3. Bacillus Subilis- 1.5X10^9 CFU\n4. Aspergillus oryzae- 1.5 X 10^9 CFU\n5. MgO- 0.8%\n6. K₂O- 3%\n7. SiO₂- 6%\n8. Al₂O3- 10%\n9. CaO- 1.3%\n10. Na₂O- 1.2%\n11. Fe₂O3- 1.2%</string>
    <string name="category_fly_ingredient">1. Bacillus licheniformis strain D3270- >1*10^11 CFU/kg\n2. Bacillus amyloliquefaciens strain D203- >1*10^10 CFU/kg\n3. Bacillus pumilus strain D1728- >1*10^10 CFU/kg\n4. Bacillus subtilis- 1*10^9 CFU/gm\n5. Bacillus megaterium- 1*10^9 CFU/gm\n6. Lactobacillus acidophills- 1*10^9 CFU/gm\n7. Lactobacillus plantarum- 1*10^9 CFU/gm\n8. Sacchromyces cerevisiae- 1*10^9 CFU/gm\n10. Carrier QS- 100 gm</string>
    <string name="category_pond_ingredient">Beneficial bacteria (probiotics) and prebiotics or fungi 22x10/9 CFU/g.</string>
    <string name="category_zeo_ingredient">1. Zeolite, Probiotic and Uca\n2. SiO₂- 48.75%\n3. P- 0.16%\n4. Al₂O3- 20.5-21.5%\n5. Mn- 0.03%\n6. Fe2O3- 3.15%\n7. Protease-5.13%\n8. CaO- 2.50%\n9. Bachilus Subtilis- 15x10^5 cfu\n10. ZnO- 0.25%\n11. B Liceheniformis- 15x10^4 cfu\n12. Na₂O- 4.08%\n13. Nitrosomonas Sp- 15x10^6 cfu\n14. K2O- 0.45%\n15. Nitrobacter Sp- 15x10^8 fu\n16. Yucca Schidigera- 15%\n17. QS- 100%</string>
    <string name="category_ecorich_ingredient">Granular Zeolite 100%</string>

    <string name="benefit">Analog Aqua removes toxic gases from water and purifies water and soil. Analogue Aqua also inhibits the growth of harmful plankton. Keeps fish habitat clean. Analog aqua reduces the oxygen level in the water to 4-5 ppm and plays a special role in preventing fish overcrowding. Analog Aqua removes odours from water and increases the beneficial bacteria that convert water and soil nutrients into acceptable food for phytoplankton and zooplankton. Improves the FCRK of food and keeps the ratio of nitrogen, phosphorus and potassium normal in water. Using analogue aqua every month keeps the fish healthy and strong.</string>
    <string name="benefit_oxy">The use of Oxy-Aqua increases the amount of dissolved oxygen required. Reduces the amount of chlorine in water bodies. It is a good disinfectant. Oxy-Aqua protects fish and shrimp against protozoa with regular use. Oxy-Aqua can provide up to 14% oxygen in pond water.</string>
    <string name="benefit_pandora">PANDORA is a biology product, containing useful bacteria, and Zeolites. Improve Quality of Water: Stabilize the dissolved oxygen content in the pond and disintegrate the excess organic substances at the bottom and source of the pond. It prevents infectious diseases due to harmful bacteria. It also absorbs toxic gas such as NH, HS and heavy metal icons. improve the growth rate of algae and plankton; stabilize the color of water during culture period.</string>
    <string name="benefit_fly">1. Suppression of water and soil bacteria and fungi.\n2. Increase in hormone production.\n3. Decomposition of pond waste.\n4. Plankton production in water.</string>
    <string name="benefit_zeo">Geo-fast maintains the quality of water and soil when used in the right amount. Removes harmful gas ammonia, carbon dioxide, and hydrogen sulphite and makes the water suitable for fish farming. Geo-fast removes soil odours and increases oxygen levels in pond bottoms. The destruction of harmful bacteria and microorganisms plays a special role. Geo-Fast increases the number of probiotics and minerals in pond water and helps produce natural food</string>

    <string name="dosage">1. For Fish 15gm per decimal 4-5 feet water level.</string>
    <string name="dosage_oxy">1. Normal hypoxia: 3-5 g/percent 4-5 ft water depth Acute hypoxia: 5-8 g/percent 4-5 ft water depth.</string>
    <string name="dosage_oxy_a">1. In general oxygen deficiency: 300/400 grams/acre,\n2. In severe oxygen deficiency: 500-700 grams/acre.</string>
    <string name="dosage_pandora">1. The first 3 month: 5 to 8 kgs per acre of water for once 2-3 weeks.\n2. The second 3 months: 5 to 6 kgs per acre of water for once 10 to 15 days Mix PANDORA With water then spread evenly to the pond.</string>
    <string name="dosage_fly">1. 100 grams per week at 3-4 feet depth in 33-century ponds.\n2. In food: 1-3 g/kg food.</string>
    <string name="dosage_pond">1. Usage Rules: For water depth of 3-4 feet per acre (100 decimal).\n2. Preventive use: Fish- 50 g, Lobster- 50 g, Prawn- 100-150 g.\n3. Medicinal Uses: Fish- 75 g, Lobster- 75 g, Prawn- 200-300 g.\n4. Duration: Fish- every 15-20 days, Lobster- every 7-10 days, Shrimp- every 7-10 days</string>
    <string name="dosage_zeo">1. 8-10 kg per acre in a water depth of 4-5 feet.</string>
    <string name="dosage_ecorich">1. In pond preparation: 200-250 grams/decimal in ponds 3-6 feet deep,\n2. During Cultivation: 100-150 grams/decimal in 3-6 feet deep ponds.</string>

    <string name="caution">1. Store in a cool and dry place\n2. Protect from sunlight\n3. Keep out of the reach of children’s Storage</string>
    <string name="caution_oxy">1. Store in a cool and dry place\n2. Protect from sunlight\n3. Keep out of the reach of children’s Storage</string>
    <string name="caution_pandora">1. Store in a cool and dry place\n2. Protect from sunlight\n3. Keep out of the reach of children’s Storage</string>
    <string name="caution_fly">1. Store in a cool and dry place\n2. Protect from sunlight\n3. Keep out of the reach of children’s Storage</string>
    <string name="caution_zeo">1. Store in a cool and dry place\n2. Protect from sunlight\n3. Keep out of the reach of children’s Storage</string>

    <string name="pandora">Pandora</string>
    <string name="fly_prob">Fly prob</string>
    <string name="zeo_fast">Zeo-fast</string>
    <string name="ecorich">Ecorich</string>

    <string name="manual_body">1. Create water movement with bamboo sticks or paddlewheels.\n2. Switch on the aerator if you have any and deliver supplementary aeration.\n3. Change 30-50% water.\n4. Add water to maintain a water depth of 4.5-7 feet.\n5. Mist water across the fishpond surface\n6. Preserve aeration day and night\n7. Check DO consistently and chart diurnal fluctuations.\n8. Prevent or lessen feeding.\n9. Eliminate dead live and plant matter from the water.\n10. Take on an extra aerator in the pond.</string>
    <string name="symptoms">Symptoms</string>
    <string name="medicine">Chemicals &amp; Medicines</string>
    <string name="fish_type">Fish Types</string>
    <string name="do_level">DO Level</string>
    <string name="do_level_selection">Please chose your collected water DO level.</string>
    <string name="carp_fish">Carp Fish</string>
    <string name="cat_fish">Cat Fish</string>
    <string name="tilapia">Tilapia Fish</string>
    <string name="mixed_fish">Mixed Fish</string>
    <string name="cat_a_symptoms">1. Deficit of hunger.\n2. Fish are stressed and suffocating.\n3. Lethargic behavior.\n4. Gathering and gasping near the surface or embankment.\n5. Fish facing inlet or aerator current.\n6. Bigger fish die, followed by smaller fish.\n7. These problems are mostly observed in the early morning.</string>
    <string name="ingredients">Ingredients</string>
    <string name="benefits_of_use">Benefits of use</string>
    <string name="dosage_and_administration">Dosage and Administration</string>
    <string name="cautions">Cautions</string>
    <string name="reference">Reference</string>
    <string name="analogue_aqua">Analogue Aqua</string>
    <string name="oxy_aqua">OXY Aqua</string>
    <string name="manual">Manual</string>
    <string name="tag_line">Water quality problem identification</string>
    <string name="result">Result</string>
    <string name="optimum_msg">The water DO level is at an optimum level, so there is nothing to be worried about</string>
    <string name="thank_you">Thank you!</string>
    <string name="picture_of_pesticide">Picture of Pesticide</string>
    <string name="version">Version-2022</string>
    <string name="zeroto4">0-5 mg/L</string>
    <string name="fiveto12">5-10 mg/L</string>
    <string name="language">ভাষা</string>
    <string name="oxy_a">Oxy-A</string>
    <string name="oxy_a_ingredient">Sodium Percarbonate</string>
    <string name="pondcare">Pondcare</string>
    <string name="precautions">Precautions</string>
    <string name="monitor_do">1. Monitor DO routinely and chart diurnal fluctuations to predict periods of low DO.\n2. Maintain aeration day and night.\n3. Place another aerator in the pond and provide additional aeration.\n4. Spray water across the pond surface.\n5. Use paddlewheels or sprayers.\n6. Stop or reduce feeding.\n7. Exchange water.\n8. Remove dead plant and animal material from the water.</string>
    <string name="instruction_choose_only">Instruction: Choose only one of the chemicals if the DO is still not at an optimal level.</string>
    <string name="close">Close</string>
    <string name="categories">Categories</string>
    <string name="instruction_do">Please chose only one of the chemicals if the DO level is not at an optimum level</string>
    <string name="sympt_heading">Please, first follow the manual way to fix the water DO level</string>
    <string name="name">Name</string>
    <string name="write_comment">Write your comment...</string>
    <string name="sharing_comment">Thank you for sharing your valuable comment.</string>
    <string name="notice">Notice</string>
    <string name="sending_feedback">Sending feedback...</string>
    <string name="error">\"Error: \"</string>
    <string name="connect_internet">Please connect to the internet and try again.\nThank you.</string>
    <string name="feed_back">FeedBack</string>
    <string name="write_name">Please write your name!</string>
    <string name="write_someting">Please write something!</string>
    <string name="send">Send</string>

</resources>