<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".CategoryB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            style="@style/sympTitle"
            android:text="@string/medicine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/medicineTitle"
                android:text="@string/fly_prob" />

            <ImageView
                android:layout_width="240dp"
                android:layout_height="280dp"
                android:gravity="start"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/fly"
                android:textAlignment="viewStart" />

            <TextView
                style="@style/insTitle"
                android:text="@string/ingredients" />

            <TextView
                style="@style/textBody"
                android:text="@string/category_fly_ingredient" />

            <TextView
                style="@style/insTitle"
                android:text="@string/benefits_of_use" />

            <TextView
                style="@style/textBody"
                android:text="@string/benefit_fly" />

            <TextView
                style="@style/insTitle"
                android:text="@string/dosage_and_administration" />

            <TextView
                style="@style/textBody"
                android:text="@string/dosage_fly" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/oval_yellow"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    style="@style/insTitle"
                    android:text="@string/cautions" />

                <TextView
                    style="@style/textBody"
                    android:text="@string/caution_zeo" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/insTitle"
                android:text="@string/reference" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/fish_ref" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>